// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Tokens/Color ] should render Amber 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(255, 251, 235);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-50)
      </span>
      <span
        class="label"
      >
        #fffbeb
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 243, 199);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-100)
      </span>
      <span
        class="label"
      >
        #fef3c7
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(253, 230, 138);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-200)
      </span>
      <span
        class="label"
      >
        #fde68a
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(252, 211, 77);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-300)
      </span>
      <span
        class="label"
      >
        #fcd34d
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(251, 191, 36);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-400)
      </span>
      <span
        class="label"
      >
        #fbbf24
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(245, 158, 11);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-500)
      </span>
      <span
        class="label"
      >
        #f59e0b
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(217, 119, 6);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-600)
      </span>
      <span
        class="label"
      >
        #d97706
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(180, 83, 9);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-700)
      </span>
      <span
        class="label"
      >
        #b45309
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(146, 64, 14);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-800)
      </span>
      <span
        class="label"
      >
        #92400e
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(120, 53, 15);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-amber-900)
      </span>
      <span
        class="label"
      >
        #78350f
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Backgrounds 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(232, 232, 232);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--background-color-primary)
      </span>
      <span
        class="label"
      >
        #e8e8e8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(252, 253, 253);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--background-color-primary-highlight)
      </span>
      <span
        class="label"
      >
        #fcfdfd
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Base 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(0, 0, 0);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-base-black)
      </span>
      <span
        class="label"
      >
        #000
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(255, 255, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-base-white)
      </span>
      <span
        class="label"
      >
        #fff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: transparent;"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-base-transparent)
      </span>
      <span
        class="label"
      >
        transparent
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Blue 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(239, 246, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-50)
      </span>
      <span
        class="label"
      >
        #eff6ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(219, 234, 254);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-100)
      </span>
      <span
        class="label"
      >
        #dbeafe
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(191, 219, 254);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-200)
      </span>
      <span
        class="label"
      >
        #bfdbfe
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(147, 197, 253);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-300)
      </span>
      <span
        class="label"
      >
        #93c5fd
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(96, 165, 250);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-400)
      </span>
      <span
        class="label"
      >
        #60a5fa
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(59, 130, 246);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-500)
      </span>
      <span
        class="label"
      >
        #3b82f6
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(37, 99, 235);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-600)
      </span>
      <span
        class="label"
      >
        #2563eb
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(29, 78, 216);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-700)
      </span>
      <span
        class="label"
      >
        #1d4ed8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(30, 64, 175);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-800)
      </span>
      <span
        class="label"
      >
        #1e40af
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(30, 58, 138);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-900)
      </span>
      <span
        class="label"
      >
        #1e3a8a
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render BlueGray 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(248, 250, 252);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-50)
      </span>
      <span
        class="label"
      >
        #f8fafc
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(241, 245, 249);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-100)
      </span>
      <span
        class="label"
      >
        #f1f5f9
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(226, 232, 240);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-200)
      </span>
      <span
        class="label"
      >
        #e2e8f0
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(203, 213, 225);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-300)
      </span>
      <span
        class="label"
      >
        #cbd5e1
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(148, 163, 184);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-400)
      </span>
      <span
        class="label"
      >
        #94a3b8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(100, 116, 139);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-500)
      </span>
      <span
        class="label"
      >
        #64748b
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(71, 85, 105);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-600)
      </span>
      <span
        class="label"
      >
        #475569
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(51, 65, 85);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-700)
      </span>
      <span
        class="label"
      >
        #334155
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(30, 41, 59);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-800)
      </span>
      <span
        class="label"
      >
        #1e293b
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(15, 23, 42);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-blue-gray-900)
      </span>
      <span
        class="label"
      >
        #0f172a
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Brand 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(117, 89, 209);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-slate-blue)
      </span>
      <span
        class="label"
      >
        #7559d1
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(152, 121, 233);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-medium-purple)
      </span>
      <span
        class="label"
      >
        #9879e9
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(239, 241, 253);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-blue-moon)
      </span>
      <span
        class="label"
      >
        #eff1fd
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(235, 45, 82);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-amaranth)
      </span>
      <span
        class="label"
      >
        #eb2d52
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(235, 78, 88);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-mandy)
      </span>
      <span
        class="label"
      >
        #eb4e58
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(69, 89, 112);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-east-bay)
      </span>
      <span
        class="label"
      >
        #455970
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(126, 133, 140);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-regent-gray)
      </span>
      <span
        class="label"
      >
        #7e858c
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(183, 183, 183);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-loblolly)
      </span>
      <span
        class="label"
      >
        #b7b7b7
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(232, 232, 232);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-white-lilac)
      </span>
      <span
        class="label"
      >
        #e8e8e8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(249, 249, 249);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-hint-of-red)
      </span>
      <span
        class="label"
      >
        #f9f9f9
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(252, 253, 253);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-romance)
      </span>
      <span
        class="label"
      >
        #fcfdfd
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(0, 229, 168);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-brand-medium-spring-green)
      </span>
      <span
        class="label"
      >
        #00e5a8
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render CoolGray 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(249, 250, 251);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-50)
      </span>
      <span
        class="label"
      >
        #f9fafb
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(243, 244, 246);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-100)
      </span>
      <span
        class="label"
      >
        #f3f4f6
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(229, 231, 235);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-200)
      </span>
      <span
        class="label"
      >
        #e5e7eb
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(209, 213, 219);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-300)
      </span>
      <span
        class="label"
      >
        #d1d5db
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(156, 163, 175);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-400)
      </span>
      <span
        class="label"
      >
        #9ca3af
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(107, 114, 128);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-500)
      </span>
      <span
        class="label"
      >
        #6b7280
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(75, 85, 99);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-600)
      </span>
      <span
        class="label"
      >
        #4b5563
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(55, 65, 81);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-700)
      </span>
      <span
        class="label"
      >
        #374151
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(31, 41, 55);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-800)
      </span>
      <span
        class="label"
      >
        #1f2937
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(17, 24, 39);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cool-gray-900)
      </span>
      <span
        class="label"
      >
        #111827
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Cyan 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(236, 254, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-50)
      </span>
      <span
        class="label"
      >
        #ecfeff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(207, 250, 254);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-100)
      </span>
      <span
        class="label"
      >
        #cffafe
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(165, 243, 252);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-200)
      </span>
      <span
        class="label"
      >
        #a5f3fc
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(103, 232, 249);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-300)
      </span>
      <span
        class="label"
      >
        #67e8f9
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(34, 211, 238);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-400)
      </span>
      <span
        class="label"
      >
        #22d3ee
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(6, 182, 212);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-500)
      </span>
      <span
        class="label"
      >
        #06b6d4
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(8, 145, 178);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-600)
      </span>
      <span
        class="label"
      >
        #0891b2
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(14, 116, 144);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-700)
      </span>
      <span
        class="label"
      >
        #0e7490
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(21, 94, 117);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-800)
      </span>
      <span
        class="label"
      >
        #155e75
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(22, 78, 99);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-cyan-900)
      </span>
      <span
        class="label"
      >
        #164e63
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Decisions 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(152, 121, 233);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-primary)
      </span>
      <span
        class="label"
      >
        #9879e9
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(117, 89, 209);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-primary-muted)
      </span>
      <span
        class="label"
      >
        #7559d1
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(239, 241, 253);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-primary-highlight)
      </span>
      <span
        class="label"
      >
        #eff1fd
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(252, 253, 253);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-primary-inverted)
      </span>
      <span
        class="label"
      >
        #fcfdfd
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(69, 89, 112);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-font-base)
      </span>
      <span
        class="label"
      >
        #455970
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(126, 133, 140);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-font-muted)
      </span>
      <span
        class="label"
      >
        #7e858c
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(183, 183, 183);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-font-highlight)
      </span>
      <span
        class="label"
      >
        #b7b7b7
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(255, 255, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-font-inverted)
      </span>
      <span
        class="label"
      >
        #fff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(235, 45, 82);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-secondary)
      </span>
      <span
        class="label"
      >
        #eb2d52
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(235, 78, 88);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-secondary-muted)
      </span>
      <span
        class="label"
      >
        #eb4e58
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 205, 211);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-secondary-highlight)
      </span>
      <span
        class="label"
      >
        #fecdd3
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(255, 255, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-secondary-inverted)
      </span>
      <span
        class="label"
      >
        #fff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(0, 229, 168);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-tertiary)
      </span>
      <span
        class="label"
      >
        #00e5a8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(52, 211, 153);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-tertiary-muted)
      </span>
      <span
        class="label"
      >
        #34d399
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(167, 243, 208);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-tertiary-highlight)
      </span>
      <span
        class="label"
      >
        #a7f3d0
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(255, 255, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-tertiary-inverted)
      </span>
      <span
        class="label"
      >
        #fff
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Default 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(152, 121, 233);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-primary)
      </span>
      <span
        class="label"
      >
        #9879e9
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Emerald 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(236, 253, 245);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-50)
      </span>
      <span
        class="label"
      >
        #ecfdf5
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(209, 250, 229);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-100)
      </span>
      <span
        class="label"
      >
        #d1fae5
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(167, 243, 208);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-200)
      </span>
      <span
        class="label"
      >
        #a7f3d0
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(110, 231, 183);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-300)
      </span>
      <span
        class="label"
      >
        #6ee7b7
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(52, 211, 153);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-400)
      </span>
      <span
        class="label"
      >
        #34d399
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(16, 185, 129);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-500)
      </span>
      <span
        class="label"
      >
        #10b981
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(5, 150, 105);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-600)
      </span>
      <span
        class="label"
      >
        #059669
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(4, 120, 87);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-700)
      </span>
      <span
        class="label"
      >
        #047857
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(6, 95, 70);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-800)
      </span>
      <span
        class="label"
      >
        #065f46
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(6, 78, 59);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-emerald-900)
      </span>
      <span
        class="label"
      >
        #064e3b
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Fuchsia 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(253, 244, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-50)
      </span>
      <span
        class="label"
      >
        #fdf4ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(250, 232, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-100)
      </span>
      <span
        class="label"
      >
        #fae8ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(245, 208, 254);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-200)
      </span>
      <span
        class="label"
      >
        #f5d0fe
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(240, 171, 252);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-300)
      </span>
      <span
        class="label"
      >
        #f0abfc
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(232, 121, 249);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-400)
      </span>
      <span
        class="label"
      >
        #e879f9
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(217, 70, 239);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-500)
      </span>
      <span
        class="label"
      >
        #d946ef
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(192, 38, 211);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-600)
      </span>
      <span
        class="label"
      >
        #c026d3
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(162, 28, 175);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-700)
      </span>
      <span
        class="label"
      >
        #a21caf
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(134, 25, 143);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-800)
      </span>
      <span
        class="label"
      >
        #86198f
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(112, 26, 117);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-fuchsia-900)
      </span>
      <span
        class="label"
      >
        #701a75
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Gray 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(250, 250, 250);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-50)
      </span>
      <span
        class="label"
      >
        #fafafa
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(244, 244, 245);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-100)
      </span>
      <span
        class="label"
      >
        #f4f4f5
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(228, 228, 231);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-200)
      </span>
      <span
        class="label"
      >
        #e4e4e7
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(212, 212, 216);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-300)
      </span>
      <span
        class="label"
      >
        #d4d4d8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(161, 161, 170);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-400)
      </span>
      <span
        class="label"
      >
        #a1a1aa
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(113, 113, 122);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-500)
      </span>
      <span
        class="label"
      >
        #71717a
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(82, 82, 91);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-600)
      </span>
      <span
        class="label"
      >
        #52525b
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(63, 63, 70);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-700)
      </span>
      <span
        class="label"
      >
        #3f3f46
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(39, 39, 42);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-800)
      </span>
      <span
        class="label"
      >
        #27272a
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(24, 24, 27);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-gray-900)
      </span>
      <span
        class="label"
      >
        #18181b
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Green 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(240, 253, 244);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-50)
      </span>
      <span
        class="label"
      >
        #f0fdf4
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(220, 252, 231);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-100)
      </span>
      <span
        class="label"
      >
        #dcfce7
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(187, 247, 208);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-200)
      </span>
      <span
        class="label"
      >
        #bbf7d0
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(134, 239, 172);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-300)
      </span>
      <span
        class="label"
      >
        #86efac
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(74, 222, 128);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-400)
      </span>
      <span
        class="label"
      >
        #4ade80
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(34, 197, 94);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-500)
      </span>
      <span
        class="label"
      >
        #22c55e
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(22, 163, 74);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-600)
      </span>
      <span
        class="label"
      >
        #16a34a
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(21, 128, 61);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-700)
      </span>
      <span
        class="label"
      >
        #15803d
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(22, 101, 52);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-800)
      </span>
      <span
        class="label"
      >
        #166534
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(20, 83, 45);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-green-900)
      </span>
      <span
        class="label"
      >
        #14532d
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Indigo 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(238, 242, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-50)
      </span>
      <span
        class="label"
      >
        #eef2ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(224, 231, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-100)
      </span>
      <span
        class="label"
      >
        #e0e7ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(199, 210, 254);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-200)
      </span>
      <span
        class="label"
      >
        #c7d2fe
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(165, 180, 252);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-300)
      </span>
      <span
        class="label"
      >
        #a5b4fc
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(129, 140, 248);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-400)
      </span>
      <span
        class="label"
      >
        #818cf8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(99, 102, 241);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-500)
      </span>
      <span
        class="label"
      >
        #6366f1
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(79, 70, 229);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-600)
      </span>
      <span
        class="label"
      >
        #4f46e5
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(67, 56, 202);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-700)
      </span>
      <span
        class="label"
      >
        #4338ca
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(55, 48, 163);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-800)
      </span>
      <span
        class="label"
      >
        #3730a3
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(49, 46, 129);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-indigo-900)
      </span>
      <span
        class="label"
      >
        #312e81
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Lime 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(247, 254, 231);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-50)
      </span>
      <span
        class="label"
      >
        #f7fee7
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(236, 252, 203);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-100)
      </span>
      <span
        class="label"
      >
        #ecfccb
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(217, 249, 157);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-200)
      </span>
      <span
        class="label"
      >
        #d9f99d
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(190, 242, 100);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-300)
      </span>
      <span
        class="label"
      >
        #bef264
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(163, 230, 53);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-400)
      </span>
      <span
        class="label"
      >
        #a3e635
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(132, 204, 22);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-500)
      </span>
      <span
        class="label"
      >
        #84cc16
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(101, 163, 13);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-600)
      </span>
      <span
        class="label"
      >
        #65a30d
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(77, 124, 15);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-700)
      </span>
      <span
        class="label"
      >
        #4d7c0f
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(63, 98, 18);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-800)
      </span>
      <span
        class="label"
      >
        #3f6212
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(54, 83, 20);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-lime-900)
      </span>
      <span
        class="label"
      >
        #365314
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Orange 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(255, 247, 237);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-50)
      </span>
      <span
        class="label"
      >
        #fff7ed
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(255, 237, 213);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-100)
      </span>
      <span
        class="label"
      >
        #ffedd5
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 215, 170);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-200)
      </span>
      <span
        class="label"
      >
        #fed7aa
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(253, 186, 116);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-300)
      </span>
      <span
        class="label"
      >
        #fdba74
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(251, 146, 60);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-400)
      </span>
      <span
        class="label"
      >
        #fb923c
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(249, 115, 22);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-500)
      </span>
      <span
        class="label"
      >
        #f97316
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(234, 88, 12);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-600)
      </span>
      <span
        class="label"
      >
        #ea580c
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(194, 65, 12);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-700)
      </span>
      <span
        class="label"
      >
        #c2410c
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(154, 52, 18);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-800)
      </span>
      <span
        class="label"
      >
        #9a3412
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(124, 45, 18);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-orange-900)
      </span>
      <span
        class="label"
      >
        #7c2d12
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Pink 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(253, 242, 248);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-50)
      </span>
      <span
        class="label"
      >
        #fdf2f8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(252, 231, 243);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-100)
      </span>
      <span
        class="label"
      >
        #fce7f3
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(251, 207, 232);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-200)
      </span>
      <span
        class="label"
      >
        #fbcfe8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(249, 168, 212);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-300)
      </span>
      <span
        class="label"
      >
        #f9a8d4
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(244, 114, 182);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-400)
      </span>
      <span
        class="label"
      >
        #f472b6
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(236, 72, 153);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-500)
      </span>
      <span
        class="label"
      >
        #ec4899
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(219, 39, 119);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-600)
      </span>
      <span
        class="label"
      >
        #db2777
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(190, 24, 93);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-700)
      </span>
      <span
        class="label"
      >
        #be185d
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(157, 23, 77);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-800)
      </span>
      <span
        class="label"
      >
        #9d174d
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(131, 24, 67);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-pink-900)
      </span>
      <span
        class="label"
      >
        #831843
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Purple 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(250, 245, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-50)
      </span>
      <span
        class="label"
      >
        #faf5ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(243, 232, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-100)
      </span>
      <span
        class="label"
      >
        #f3e8ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(233, 213, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-200)
      </span>
      <span
        class="label"
      >
        #e9d5ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(216, 180, 254);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-300)
      </span>
      <span
        class="label"
      >
        #d8b4fe
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(192, 132, 252);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-400)
      </span>
      <span
        class="label"
      >
        #c084fc
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(168, 85, 247);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-500)
      </span>
      <span
        class="label"
      >
        #a855f7
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(147, 51, 234);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-600)
      </span>
      <span
        class="label"
      >
        #9333ea
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(126, 34, 206);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-700)
      </span>
      <span
        class="label"
      >
        #7e22ce
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(107, 33, 168);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-800)
      </span>
      <span
        class="label"
      >
        #6b21a8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(88, 28, 135);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-purple-900)
      </span>
      <span
        class="label"
      >
        #581c87
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Red 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 242, 242);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-50)
      </span>
      <span
        class="label"
      >
        #fef2f2
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 226, 226);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-100)
      </span>
      <span
        class="label"
      >
        #fee2e2
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 202, 202);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-200)
      </span>
      <span
        class="label"
      >
        #fecaca
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(252, 165, 165);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-300)
      </span>
      <span
        class="label"
      >
        #fca5a5
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(248, 113, 113);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-400)
      </span>
      <span
        class="label"
      >
        #f87171
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(239, 68, 68);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-500)
      </span>
      <span
        class="label"
      >
        #ef4444
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(220, 38, 38);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-600)
      </span>
      <span
        class="label"
      >
        #dc2626
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(185, 28, 28);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-700)
      </span>
      <span
        class="label"
      >
        #b91c1c
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(153, 27, 27);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-800)
      </span>
      <span
        class="label"
      >
        #991b1b
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(127, 29, 29);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-red-900)
      </span>
      <span
        class="label"
      >
        #7f1d1d
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Rose 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(255, 241, 242);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-50)
      </span>
      <span
        class="label"
      >
        #fff1f2
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(255, 228, 230);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-100)
      </span>
      <span
        class="label"
      >
        #ffe4e6
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 205, 211);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-200)
      </span>
      <span
        class="label"
      >
        #fecdd3
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(253, 164, 175);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-300)
      </span>
      <span
        class="label"
      >
        #fda4af
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(251, 113, 133);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-400)
      </span>
      <span
        class="label"
      >
        #fb7185
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(244, 63, 94);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-500)
      </span>
      <span
        class="label"
      >
        #f43f5e
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(225, 29, 72);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-600)
      </span>
      <span
        class="label"
      >
        #e11d48
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(190, 18, 60);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-700)
      </span>
      <span
        class="label"
      >
        #be123c
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(159, 18, 57);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-800)
      </span>
      <span
        class="label"
      >
        #9f1239
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(136, 19, 55);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-rose-900)
      </span>
      <span
        class="label"
      >
        #881337
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Sky 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(240, 249, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-50)
      </span>
      <span
        class="label"
      >
        #f0f9ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(224, 242, 254);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-100)
      </span>
      <span
        class="label"
      >
        #e0f2fe
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(186, 230, 253);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-200)
      </span>
      <span
        class="label"
      >
        #bae6fd
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(125, 211, 252);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-300)
      </span>
      <span
        class="label"
      >
        #7dd3fc
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(56, 189, 248);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-400)
      </span>
      <span
        class="label"
      >
        #38bdf8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(14, 165, 233);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-500)
      </span>
      <span
        class="label"
      >
        #0ea5e9
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(2, 132, 199);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-600)
      </span>
      <span
        class="label"
      >
        #0284c7
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(3, 105, 161);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-700)
      </span>
      <span
        class="label"
      >
        #0369a1
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(7, 89, 133);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-800)
      </span>
      <span
        class="label"
      >
        #075985
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(12, 74, 110);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-sky-900)
      </span>
      <span
        class="label"
      >
        #0c4a6e
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Teal 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(240, 253, 250);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-50)
      </span>
      <span
        class="label"
      >
        #f0fdfa
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(204, 251, 241);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-100)
      </span>
      <span
        class="label"
      >
        #ccfbf1
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(153, 246, 228);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-200)
      </span>
      <span
        class="label"
      >
        #99f6e4
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(94, 234, 212);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-300)
      </span>
      <span
        class="label"
      >
        #5eead4
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(45, 212, 191);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-400)
      </span>
      <span
        class="label"
      >
        #2dd4bf
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(20, 184, 166);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-500)
      </span>
      <span
        class="label"
      >
        #14b8a6
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(13, 148, 136);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-600)
      </span>
      <span
        class="label"
      >
        #0d9488
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(15, 118, 110);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-700)
      </span>
      <span
        class="label"
      >
        #0f766e
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(17, 94, 89);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-800)
      </span>
      <span
        class="label"
      >
        #115e59
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(19, 78, 74);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-teal-900)
      </span>
      <span
        class="label"
      >
        #134e4a
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render TrueGray 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(250, 250, 250);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-50)
      </span>
      <span
        class="label"
      >
        #fafafa
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(245, 245, 245);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-100)
      </span>
      <span
        class="label"
      >
        #f5f5f5
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(229, 229, 229);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-200)
      </span>
      <span
        class="label"
      >
        #e5e5e5
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(212, 212, 212);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-300)
      </span>
      <span
        class="label"
      >
        #d4d4d4
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(163, 163, 163);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-400)
      </span>
      <span
        class="label"
      >
        #a3a3a3
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(115, 115, 115);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-500)
      </span>
      <span
        class="label"
      >
        #737373
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(82, 82, 82);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-600)
      </span>
      <span
        class="label"
      >
        #525252
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(64, 64, 64);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-700)
      </span>
      <span
        class="label"
      >
        #404040
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(38, 38, 38);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-800)
      </span>
      <span
        class="label"
      >
        #262626
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(23, 23, 23);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-true-gray-900)
      </span>
      <span
        class="label"
      >
        #171717
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Violet 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(245, 243, 255);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-50)
      </span>
      <span
        class="label"
      >
        #f5f3ff
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(237, 233, 254);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-100)
      </span>
      <span
        class="label"
      >
        #ede9fe
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(221, 214, 254);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-200)
      </span>
      <span
        class="label"
      >
        #ddd6fe
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(196, 181, 253);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-300)
      </span>
      <span
        class="label"
      >
        #c4b5fd
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(167, 139, 250);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-400)
      </span>
      <span
        class="label"
      >
        #a78bfa
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(139, 92, 246);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-500)
      </span>
      <span
        class="label"
      >
        #8b5cf6
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(124, 58, 237);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-600)
      </span>
      <span
        class="label"
      >
        #7c3aed
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(109, 40, 217);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-700)
      </span>
      <span
        class="label"
      >
        #6d28d9
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(91, 33, 182);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-800)
      </span>
      <span
        class="label"
      >
        #5b21b6
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(76, 29, 149);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-violet-900)
      </span>
      <span
        class="label"
      >
        #4c1d95
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render WarmGray 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(250, 250, 249);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-50)
      </span>
      <span
        class="label"
      >
        #fafaf9
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(245, 245, 244);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-100)
      </span>
      <span
        class="label"
      >
        #f5f5f4
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(231, 229, 228);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-200)
      </span>
      <span
        class="label"
      >
        #e7e5e4
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(214, 211, 209);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-300)
      </span>
      <span
        class="label"
      >
        #d6d3d1
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(168, 162, 158);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-400)
      </span>
      <span
        class="label"
      >
        #a8a29e
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(120, 113, 108);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-500)
      </span>
      <span
        class="label"
      >
        #78716c
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(87, 83, 78);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-600)
      </span>
      <span
        class="label"
      >
        #57534e
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(68, 64, 60);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-700)
      </span>
      <span
        class="label"
      >
        #44403c
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(41, 37, 36);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-800)
      </span>
      <span
        class="label"
      >
        #292524
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(28, 25, 23);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-warm-gray-900)
      </span>
      <span
        class="label"
      >
        #1c1917
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[ storybook ] [ Tokens/Color ] should render Yellow 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 252, 232);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-50)
      </span>
      <span
        class="label"
      >
        #fefce8
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 249, 195);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-100)
      </span>
      <span
        class="label"
      >
        #fef9c3
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(254, 240, 138);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-200)
      </span>
      <span
        class="label"
      >
        #fef08a
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(253, 224, 71);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-300)
      </span>
      <span
        class="label"
      >
        #fde047
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(250, 204, 21);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-400)
      </span>
      <span
        class="label"
      >
        #facc15
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(234, 179, 8);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-500)
      </span>
      <span
        class="label"
      >
        #eab308
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(202, 138, 4);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-600)
      </span>
      <span
        class="label"
      >
        #ca8a04
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(161, 98, 7);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-700)
      </span>
      <span
        class="label"
      >
        #a16207
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(133, 77, 14);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-800)
      </span>
      <span
        class="label"
      >
        #854d0e
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="color"
      style="background-color: rgb(113, 63, 18);"
    />
    <div
      class="description"
    >
      <span
        class="label"
      >
        var(--color-yellow-900)
      </span>
      <span
        class="label"
      >
        #713f12
      </span>
    </div>
  </div>
</DocumentFragment>
`;
